.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:02:14 **** Incremental Build of configuration Release for project CPP_Blinky_Delay_not_Blocking ****
make -j8 all 
arm-none-eabi-g++ "../Core_CPP/Src/BlinkingLed.cpp" -mcpu=cortex-m7 -std=gnu++14 -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/raphael.baumeler/STM32CubeIDE/workspace_1.10.1/CPP_Blinky_Delay_not_Blocking/Core_CPP/Inc" -Os -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core_CPP/Src/BlinkingLed.d" -MT"Core_CPP/Src/BlinkingLed.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core_CPP/Src/BlinkingLed.o"
arm-none-eabi-g++ "../Core_CPP/Src/NoneBlockSystemTickDelay.cpp" -mcpu=cortex-m7 -std=gnu++14 -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/raphael.baumeler/STM32CubeIDE/workspace_1.10.1/CPP_Blinky_Delay_not_Blocking/Core_CPP/Inc" -Os -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core_CPP/Src/NoneBlockSystemTickDelay.d" -MT"Core_CPP/Src/NoneBlockSystemTickDelay.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core_CPP/Src/NoneBlockSystemTickDelay.o"
arm-none-eabi-g++ "../Core_CPP/Src/STM32H7Led.cpp" -mcpu=cortex-m7 -std=gnu++14 -DUSE_HAL_DRIVER -DSTM32F746xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/raphael.baumeler/STM32CubeIDE/workspace_1.10.1/CPP_Blinky_Delay_not_Blocking/Core_CPP/Inc" -Os -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core_CPP/Src/STM32H7Led.d" -MT"Core_CPP/Src/STM32H7Led.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core_CPP/Src/STM32H7Led.o"
In file included from ../Core_CPP/Src/STM32H7Led.h:11,
                 from ../Core_CPP/Src/STM32H7Led.cpp:8:
../Core_CPP/Src/BlinkingLed.h:16:2: error: 'float_t' does not name a type; did you mean 'float'?
   16 |  float_t Frequency;
      |  ^~~~~~~
      |  float
../Core_CPP/Src/BlinkingLed.h:26:20: error: 'float_t' has not been declared
   26 |  void setFrequency(float_t frequency) {
      |                    ^~~~~~~
../Core_CPP/Src/BlinkingLed.h: In member function 'void BlinkingLed::setFrequency(int)':
../Core_CPP/Src/BlinkingLed.h:27:3: error: 'Frequency' was not declared in this scope; did you mean 'frequency'?
   27 |   Frequency = frequency;
      |   ^~~~~~~~~
      |   frequency
In file included from ../Core_CPP/Src/STM32H7Led.cpp:8:
../Core_CPP/Src/STM32H7Led.h: At global scope:
../Core_CPP/Src/STM32H7Led.h:15:2: error: 'GPIO_TypeDef' does not name a type
   15 |  GPIO_TypeDef* Port;
      |  ^~~~~~~~~~~~
In file included from ../Core_CPP/Src/BlinkingLed.cpp:8:
../Core_CPP/Src/BlinkingLed.h:16:2: error: 'float_t' does not name a type; did you mean 'float'?
   16 |  float_t Frequency;
      |  ^~~~~~~
      |  float
../Core_CPP/Src/BlinkingLed.h:26:20: error: 'float_t' has not been declared
   26 |  void setFrequency(float_t frequency) {
      |                    ^~~~~~~
../Core_CPP/Src/STM32H7Led.h: In member function 'void STM32H7Led::toggleLED()':
../Core_CPP/Src/STM32H7Led.h:22:22: error: 'Port' was not declared in this scope
   22 |   HAL_GPIO_TogglePin(Port, Pin);
      |                      ^~~~
In file included from ../Core_CPP/Src/NoneBlockSystemTickDelay.h:11,
                 from ../Core_CPP/Src/NoneBlockSystemTickDelay.cpp:8:
../Core_CPP/Src/BlinkingLed.h:16:2: error: 'float_t' does not name a type; did you mean 'float'?
   16 |  float_t Frequency;
      |  ^~~~~~~
      |  float
../Core_CPP/Src/BlinkingLed.h:26:20: error: 'float_t' has not been declared
   26 |  void setFrequency(float_t frequency) {
      |                    ^~~~~~~
../Core_CPP/Src/STM32H7Led.h:22:3: error: 'HAL_GPIO_TogglePin' was not declared in this scope
   22 |   HAL_GPIO_TogglePin(Port, Pin);
      |   ^~~~~~~~~~~~~~~~~~
../Core_CPP/Src/BlinkingLed.h: In member function 'void BlinkingLed::setFrequency(int)':
../Core_CPP/Src/BlinkingLed.h:27:3: error: 'Frequency' was not declared in this scope; did you mean 'frequency'?
   27 |   Frequency = frequency;
      |   ^~~~~~~~~
      |   frequency
../Core_CPP/Src/BlinkingLed.h: In member function 'void BlinkingLed::setFrequency(int)':
../Core_CPP/Src/BlinkingLed.h:27:3: error: 'Frequency' was not declared in this scope; did you mean 'frequency'?
   27 |   Frequency = frequency;
      |   ^~~~~~~~~
      |   frequency
../Core_CPP/Src/STM32H7Led.cpp: In constructor 'STM32H7Led::STM32H7Led()':
../Core_CPP/Src/STM32H7Led.cpp:12:14: error: 'Port' is not a member of 'STM32H7Led'
   12 |  STM32H7Led::Port = GPIOB;
      |              ^~~~
../Core_CPP/Src/STM32H7Led.cpp:12:21: error: 'GPIOB' was not declared in this scope
   12 |  STM32H7Led::Port = GPIOB;
      |                     ^~~~~
In file included from ../Core_CPP/Src/NoneBlockSystemTickDelay.cpp:8:
../Core_CPP/Src/NoneBlockSystemTickDelay.h: At global scope:
../Core_CPP/Src/NoneBlockSystemTickDelay.h:15:2: error: 'DelayNoneBlocking_wait' does not name a type
   15 |  DelayNoneBlocking_wait uint32_t = 0;   // Intervall in ms
      |  ^~~~~~~~~~~~~~~~~~~~~~
../Core_CPP/Src/STM32H7Led.cpp:13:20: error: 'GPIO_Pin_7' was not declared in this scope
   13 |  STM32H7Led::Pin = GPIO_Pin_7;
      |                    ^~~~~~~~~~
../Core_CPP/Src/NoneBlockSystemTickDelay.h:16:2: error: 'DelayNoneBlocking_tickstart' does not name a type
   16 |  DelayNoneBlocking_tickstart uint32_t = 0;  // last_time
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../Core_CPP/Src/NoneBlockSystemTickDelay.h: In member function 'void NoneBlockSystemTickDelay::DelayNonBlocking_Init(uint32_t)':
../Core_CPP/Src/NoneBlockSystemTickDelay.h:22:3: error: 'DelayNoneBlocking_tickstart' was not declared in this scope; did you mean 'DelayNonBlocking_Init'?
   22 |   DelayNoneBlocking_tickstart = HAL_GetTick();
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |   DelayNonBlocking_Init
../Core_CPP/Src/NoneBlockSystemTickDelay.h:22:33: error: 'HAL_GetTick' was not declared in this scope
   22 |   DelayNoneBlocking_tickstart = HAL_GetTick();
      |                                 ^~~~~~~~~~~
../Core_CPP/Src/NoneBlockSystemTickDelay.h:23:3: error: 'wait' was not declared in this scope
   23 |   wait = Delay;
      |   ^~~~
../Core_CPP/Src/NoneBlockSystemTickDelay.h: In member function 'uint8_t NoneBlockSystemTickDelay::DelayNonBlocking_CheckExpiration()':
../Core_CPP/Src/NoneBlockSystemTickDelay.h:30:6: error: 'HAL_GetTick' was not declared in this scope
   30 |   if(HAL_GetTick() - DelayNoneBlocking_wait > DelayNoneBlocking_tickstart)
      |      ^~~~~~~~~~~
../Core_CPP/Src/NoneBlockSystemTickDelay.h:30:22: error: 'DelayNoneBlocking_wait' was not declared in this scope; did you mean 'DelayNonBlocking_Init'?
   30 |   if(HAL_GetTick() - DelayNoneBlocking_wait > DelayNoneBlocking_tickstart)
      |                      ^~~~~~~~~~~~~~~~~~~~~~
      |                      DelayNonBlocking_Init
make: *** [Core_CPP/Src/subdir.mk:28: Core_CPP/Src/BlinkingLed.o] Error 1
make: *** Waiting for unfinished jobs....
../Core_CPP/Src/NoneBlockSystemTickDelay.h:30:47: error: 'DelayNoneBlocking_tickstart' was not declared in this scope; did you mean 'DelayNonBlocking_Init'?
   30 |   if(HAL_GetTick() - DelayNoneBlocking_wait > DelayNoneBlocking_tickstart)
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                               DelayNonBlocking_Init
make: *** [Core_CPP/Src/subdir.mk:28: Core_CPP/Src/STM32H7Led.o] Error 1
make: *** [Core_CPP/Src/subdir.mk:28: Core_CPP/Src/NoneBlockSystemTickDelay.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
